Bug 429368 - Custom equation broke in multiple instances
Summary: Custom equation broke in multiple instances
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.8.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Stefan Gerlach
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-11-19 21:36 UTC by Colin Gauvin
Modified: 2020-11-19 23:09 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.8.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Colin Gauvin 2020-11-19 21:36:07 UTC
SUMMARY
My custom equation just suddenly stopped working despite no change in the data or plots. 

STEPS TO REPRODUCE
1. Use the following equation: 1*(1-e^(-k*x))
2. 
3. 

OBSERVED RESULT
I had > 12 spreadsheets, each with Time in the X and Catalysis in the Y. Most of these are from months ago and haven't been touched since they were initially created (some going back to April). Since opening LabPlot 2.81 for the first time, suddenly the equation is red, and any fits that I graphed with it have disappeared. 

EXPECTED RESULT
That my fits, which have been there for months, were still there upon re-opening the program

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: openSUSE tumbleweed 20201117
(available in About System)
KDE Plasma Version: 5.20.3
KDE Frameworks Version: 5.75.0
Qt Version: 5.15.1

ADDITIONAL INFORMATION
The calculated k values are still showing, but if I click "Fit" again, it just errors them out to 1. Again, this is an equation I've been using fine for months and have validated in GraphPad Prism as well. Hopefully there's a fix because I really hate GraphPad Prism.
Comment 1 Stefan Gerlach 2020-11-19 23:02:13 UTC
Git commit 33b22d2f76c2ea79058ac0f66cad2d75f405f99d by Stefan Gerlach.
Committed on 19/11/2020 at 22:56.
Pushed by sgerlach into branch 'master'.

[fit] Fix custom model equation validation
FIXED-IN: 2.8.2

M  +5    -3    src/kdefrontend/dockwidgets/XYFitCurveDock.cpp

https://invent.kde.org/education/labplot/commit/33b22d2f76c2ea79058ac0f66cad2d75f405f99d
Comment 2 Stefan Gerlach 2020-11-19 23:03:22 UTC
Git commit 00eb2a2f02d49b68a0370e2cb39743867ee162a0 by Stefan Gerlach.
Committed on 19/11/2020 at 23:03.
Pushed by sgerlach into branch 'release/2.8'.

[fit] Fix custom model equation validation
FIXED-IN: 2.8.2

M  +5    -3    src/kdefrontend/dockwidgets/XYFitCurveDock.cpp

https://invent.kde.org/education/labplot/commit/00eb2a2f02d49b68a0370e2cb39743867ee162a0
Comment 3 Colin Gauvin 2020-11-19 23:09:05 UTC
Thank you for the super fast fix!