[fit] Fix custom model equation validation

BUG: 429368
FIXED-IN: 2.8.2